# airport-dispatcher

./: .gitignore  CMakeLists.txt
assets/: levels.json
config/: levels.json
include/Core/: AirplaneFactory.hpp  EventQueue.hpp  IAirplane.hpp  LevelManager.hpp  Runway.hpp  TaxiwayManager.hpp
include/Core/Planes/: Biplane.hpp  BusinessJet.hpp  MilitaryDrone.hpp  WideAirliner.hpp
include/Logic/: Dispatcher.hpp  PenaltyManager.hpp
include/Persistence/: StatisticsManager.hpp
src/: Airport.cpp  Airport.h  Camera.h  Event.h  EventHandler.h  Game.cpp  Game.h  InPlane.h  Level.h  LevelInProgress.cpp  LevelInProgress.h  LevelProducer.cpp  LevelProducer.h  Menu.cpp  Menu.h  Octagon.cpp  Octagon.h  Plane.cpp  Plane.h  Player.h  RadioButtonGroup.cpp  RadioButtonGroup.h  Road.cpp  Road.h  Runway.cpp  Runway.h  main.cpp
src/Core/: AirplaneFactory.cpp  CMakeLists.txt  EventQueue.cpp  LevelManager.cpp
src/Logic/: CMakeLists.txt  Dispatcher.cpp
